--- a/src/modify.html
+++ b/src/modify.html
@@ -7,27 +7,29 @@
   <title>JS DOM Practice</title>
 </head>
 <body>
-  <div id="header">
-    <div id="nav">
+  <header>
+    <nav>
       <ul>
         <li><a href="./">Home</a></li>
         <li><a href="https://google.com">Google</a></li>
       </ul>
-    </div>
-  </div>
-  <div id="main">
+    </nav>
+  </header>
+
+  <main>
     <h1>Modify Challenge!</h1>
-    <p id="subtitle">Can You solve the challenge</p>
-    <h1 id="second-heading">What should I be?</h1>
-    <div class="preformatted">
-      <p id="code-snippet">
+    <p>Can you solve the challenge?</p>
+    <h1>What should I be?</h1>
+    <pre>
+      <code>
         const isCorrect = false;
         console.log('What can we do about it?')
-      </p>
-    </div>
-  </div>
-  <div id="footer">
+      </code>
+    </pre>
+  </main>
+
+  <footer>
     <p>Created by Marcy Lab</p>
-  </div>
+  </footer>
 </body>
 </html>
